--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
             <div class="introduction">
                 <h1 class="heading-primary">Hey, I'm Antonio Maggi</h1>
                 <p><span id="dynamic-text">Software</span> Developer building and managing Websites and Web Applications. Passionate about clean code and continuously learning in the tech field.</p>
+                
+                <div class="social-buttons">
+                    <a href="https://www.linkedin.com/in/antonio-maggi" class="btn linkedin-btn">
+                        <i class="devicon-linkedin-plain"></i> LinkedIn
+                    </a>
+                    <a href="https://github.com/AntonioMaggi" class="btn github-btn">
+                        <i class="devicon-github-original"></i> GitHub
+                    </a>
+                </div>
             </div>
         </section>
         <section id="about">
@@ -44,7 +53,7 @@
                         <i class="devicon-html5-plain-wordmark" style="font-size: 5rem;"></i>
                         <i class="devicon-css3-plain-wordmark" style="font-size: 5rem;"></i>
                         <i class="devicon-tailwindcss-plain-wordmark" style="font-size: 5rem;"></i>
-                        <i class="devicon-bootstrap-plain" style="font-size: 5rem;"></i>
+                        <i class="devicon-wordpress-plain-wordmark" style="font-size: 5rem;"></i>
                         <i class="devicon-mongodb-plain-wordmark" style="font-size: 5rem;"></i>
                         <i class="devicon-postman-plain-wordmark" style="font-size: 5rem;"></i>
                     </div>
@@ -75,6 +84,11 @@
         </section>
         
     </main>
+    <footer>
+        <div class="footer-container">
+            <p>Made by Antonio Maggi</p>
+        </div>
+    </footer>
     <script src="script.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
