updated home button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="logo"><a href="#"><img src="logo.png" alt="AM"></a></h1>
+        <h1 class="logo"><a href="https://antoniomaggi.github.io/"><img src="logo.png" alt="AM"></a></h1>
         <div class="container gray highlightTextIn navbar">
             <a alt="ABOUT" href="#about">ABOUT</a>
             <a alt="PORTFOLIO" href="#projects">PORTFOLIO</a>
