--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>        
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can contact me at maggia1013[at]gmail.com or use the form below:</p>
+            <p>You can contact me at maggia1013@gmail.com or use the form below:</p>
             <form id="contact-form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
