Added current Angular project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="about-container">
                 <div class="about-content">
                     <h2>About Me</h2>
-                    <p>Welcome to my personal website! I am a passionate software developer specializing in PHP/Laravel, JavaScript/Angular, and MySQL. With a strong foundation in relational databases, I enjoy crafting efficient and scalable web applications. My journey in the tech world has been driven by a relentless curiosity and a commitment to continuous learning. Each project I undertake is an opportunity to hone my skills and embrace new technologies, ensuring that I remain at the forefront of industry trends and best practices.<br><br>
+                    <p>Welcome to my personal website! I am a passionate software developer specializing in PHP/Laravel, JavaScript, Angular, and MySQL. With a strong foundation in relational databases, I enjoy crafting efficient and scalable web applications. My journey in the tech world has been driven by a relentless curiosity and a commitment to continuous learning. Each project I undertake is an opportunity to hone my skills and embrace new technologies, ensuring that I remain at the forefront of industry trends and best practices.<br><br>
         
                     I am always eager to connect with fellow professionals, collaborate on innovative projects, and explore new opportunities. Whether you're looking for a dedicated developer to bring your ideas to life, or just want to discuss the latest in web development, I am open to networking and building meaningful connections. Feel free to reach out to me – let’s create something amazing together!</p>
                 </div>
