open links in new tab

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <p><span id="dynamic-text">Software</span> Developer building and managing Websites and Web Applications. Passionate about clean code and continuously learning in the tech field.</p>
                 
                 <div class="social-buttons">
-                    <a href="https://www.linkedin.com/in/antonio-maggi" class="btn linkedin-btn">
+                    <a href="https://www.linkedin.com/in/antonio-maggi" class="btn linkedin-btn" target="_blank" rel="noopener noreferrer">
                         <i class="devicon-linkedin-plain"></i> LinkedIn
                     </a>
-                    <a href="https://github.com/AntonioMaggi" class="btn github-btn">
+                    <a href="https://github.com/AntonioMaggi" class="btn github-btn" target="_blank" rel="noopener noreferrer">
                         <i class="devicon-github-original"></i> GitHub
                     </a>
                 </div>
